--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sample Todo App for an AWS migration test"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Todo App</title>
